// 2.55 Change Log
// Updated 17th Dec, 2021

//Since A100

Fixed Overhead combos on Layer 0
Fixed automatically re-entering warps on exit
	( EmilyV, Dec 17th, 2021 )

//Alpha 100

Add ghost.zh-based internal script movement functions
	npc->Move(dir, px, special)
	npc->MoveAtAngle(angle, px, special)
	npc->MoveXY(dx, dy, special)
	Also, add MoveFlags 'Only Water', 'Only Shallow Water', and 'Only Pitfalls'
		to go with these functions; changing the collision detection to *require*
		the enemy be on the respective type of combo.
	( EmilyV, Dec 17th, 2021 )

Add SwitchHooks / Switch Effects
Fix 'combodata->Tile'/'combodata->OriginalTile'
	( EmilyV, Dec 13th, 2021 )

Add Misc SFX menu (Audio->Misc SFX)
	( EmilyV, Dec 12th, 2021 )

Cross-Screen Respawn Points
	( EmilyV, Dec 8th, 2021 )

Bunch more help text throughout Dec 2021

Item and Combo editor help text for attribs/flags
Light beam puzzles - "Spotlight", "Glass", and "Light Trigger" combo types
	( EmilyV, Nov 29th, 2021 )

New Combo Editor
	( EmilyV, Nov 28th, 2021 )

Fix Din's fire cost compatability bug for old quests
	( EmilyV, Nov 25th, 2021 )

New homing/bait options
	( Deedee, Nov 23rd, 2021 )

Add Magic Mirrors
	( EmilyV, Nov 23rd, 2021 )

Add Bug Net / catching fairies
	( EmilyV, Nov 17th, 2021 )

New Patra enemy editor options
	( Deedee, Nov 16th, 2021 )

Fix 'counter %' SCCs which never worked to begin with
Added Fillable Bottles
	( EmilyV, Nov 16th, 2021 )

Add bunny/Moon Pearl feature (dmap flag, pearl item class, init data LTM)
	( EmilyV, Nov 15th, 2021 )

Enemy Editor dropdowns stuff
	( Deedee, Nov 14th, 2021 )
Fix 'Hit All Triggers->Perm' not triggering *temp* secrets,
	only setting the perm secret state
Fix large map displaying negative offsets wrong
	( EmilyV, Nov 14th, 2021 )
	
Fix cloaked/phantom drawstyles
Fix '->Polygon' hardlock
	( EmilyV, Nov 13th, 2021 )

Update classic tileset (no more Classic.zh stuff,
	new tiles/combos for Signpost, Crystal Switch, Lantern, etc,